test/1.2/errors/T_EBREAK.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
method m() {
    /// ERROR EBREAK
    break;
}

method init {
    /// ERROR EBREAK
    break;

    foreach x in ([1, 2]) {
        inline $m();
    }
}
